# dubious

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: cor_benchmark.py
docs/: requirements.txt
docs/api/: dubious.rst  dubious.umath.rst
docs/source/: conf.py  index.rst
docs/source/api/: dubious.core.rst  dubious.distributions.rst  dubious.rst
src/dubious/: __init__.py  context.py  distributions.py  node.py  sampleable.py  uncertain.py
src/dubious.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/dubious/core/: __init__.py  context.py  node.py  sample_session.py  sampleable.py  sampler.py  uncertain.py
src/dubious/distributions/: __init__.py  beta.py  dist_helpers.py  distributions.py  lognormal.py  normal.py  uniform.py
src/dubious/umath/: __init__.py  ops.py  stats.py
src/math/: ustats.py
tests/: cor_test.py  test.py  test_.py  visual_tests.ipynb
tests/data/: solar_irradiance.csv
